:package: Setup app component & routing

--- a/src/client/src/app/app.component.html
+++ b/src/client/src/app/app.component.html
@@ -1,23 +1,5 @@
-<div class="container">
-  <div class="d-flex justify-content-center align-items-center" style="height: 100vh">
-    <div class="text-center">
-      <img
-        class="mb-4"
-        src="https://mdbootstrap.com/img/logo/mdb-transparent-250px.png"
-        style="width: 250px; height: 90px"
-      />
-      <h5 class="mb-3">Thank you for using our product. We're glad you're with us.</h5>
-      <p class="mb-3">MDB Team</p>
-      <p>
-        PS. We'll be releasing "How to build your first project with MDB 5 Angular" tutorial soon.
-      </p>
-      <a
-      class="btn btn-primary btn-lg"
-      href=" https://mdbootstrap.com/newsletter/"
-      target="_blank"
-      role="button"
-      >Join now</a
-      >
-    </div>
-  </div>
-</div>
+<app-header></app-header>
+
+<router-outlet></router-outlet>
+
+<app-footer></app-footer>
