--- a/src/client/src/app/components/header/header.component.html
+++ b/src/client/src/app/components/header/header.component.html
@@ -1,10 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"
-      ><i class="fab fa-docker fa-2x dodger-blue"></i
-    ></a>
-    <h1 class="h1-responsive navbar-text fw-bold dodger-blue">
-      Docker Dashboard
+    <h1 class="h1-responsive navbar-text fw-bold dodger-blue" routerLink="">
+      <i class="fab fa-docker dodger-blue"></i> Docker Dashboard
     </h1>
 
     <div
