--- a/src/client/src/styles.scss
+++ b/src/client/src/styles.scss
@@ -1,3 +1,4 @@
+@import "~ngx-toastr/toastr";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/regular.scss";
@@ -19,6 +20,7 @@
   font-size: 45px;
   padding: 0;
   color: DodgerBlue;
+  cursor: pointer;
 }
 
 .dodger-blue {
