:+1: Update menu component

--- a/src/client/src/app/core/menu/menu.component.html
+++ b/src/client/src/app/core/menu/menu.component.html
@@ -1,6 +1,10 @@
 <div class="container mt-2 p-3">
   <div class="row p-3 mb-2">
-    <div class="col-md-6 d-flex align-items-center justify-content-center">
+    <div
+      class="col-md-6 d-flex align-items-center justify-content-center"
+      data-aos="zoom-in"
+      data-aos-duration="1000"
+    >
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">
@@ -20,7 +24,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">
@@ -31,11 +35,17 @@
           </h5>
 
           <p>Manage your containers</p>
-          <button type="button" class="btn dodger-blue-bg">Go</button>
+          <button
+            type="button"
+            routerLink="containers"
+            class="btn dodger-blue-bg"
+          >
+            Go
+          </button>
         </div>
       </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">
