--- a/src/client/src/app/components/footer/footer.component.html
+++ b/src/client/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
-<footer class="bg-light fixed-bottom text-center text-lg-start">
+<footer class="text-center text-lg-start">
   <!-- Copyright -->
   <div class="p-3 text-center">
-    © 2022 Made with <i class="fas fa-heart text-danger"></i> by
+    © 2022 Made with <i class="fas fa-heart text-danger pulse-animation"></i> by
     <a href="https://github.com/AbduazizZiyodov" target="_blank"
       >Abduaziz Ziyodov</a
     >
