--- a/src/client/src/app/core/menu/menu.component.html
+++ b/src/client/src/app/core/menu/menu.component.html
@@ -1,4 +1,5 @@
 <div class="container mt-2 p-3">
+  
   <div class="row p-3 mb-2">
     <div
       class="col-md-6 d-flex align-items-center justify-content-center"
@@ -24,7 +25,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+    <div class="col-md-6 mb-2" data-aos="fade-right" data-aos-duration="1000">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">
@@ -45,7 +46,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+    <div class="col-md-6 mb-2" data-aos="fade-left" data-aos-duration="1000">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">
@@ -55,7 +56,9 @@
           </h5>
 
           <p>Manage your images</p>
-          <button type="button" class="btn dodger-blue-bg">Go</button>
+          <button type="button" routerLink="images" class="btn dodger-blue-bg">
+            Go
+          </button>
         </div>
       </div>
     </div>
