:100: Add navigation button to header and icon to modal

--- a/src/client/src/app/components/header/header.component.html
+++ b/src/client/src/app/components/header/header.component.html
@@ -9,12 +9,19 @@
       id="navbarSupportedContent"
       mdbCollapse
       #basicNavbar="mdbCollapse"
-    >
-      <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Containers</a>
-        </li>
-      </ul> -->
-    </div>
+    ></div>
   </div>
 </nav>
+
+<div class="row mt-2 text-center">
+  <div class="col-md-6">
+    <button class="btn dodger-blue-bg" (click)="back()">
+      <i class="fas fa-angle-double-left"></i>
+    </button>
+  </div>
+  <div class="col-md-6">
+    <button class="btn dodger-blue-bg" (click)="next()">
+      <i class="fas fa-angle-double-right"></i>
+    </button>
+  </div>
+</div>
