--- a/src/client/src/app/components/modal/modal.component.html
+++ b/src/client/src/app/components/modal/modal.component.html
@@ -66,6 +66,6 @@
     class="btn btn-danger text-capitalize"
     (click)="modalRef.close()"
   >
-    Close
+    <i class="far fa-times-circle"></i> Close
   </button>
 </div>
