:smile: Add copyId function to containers

--- a/src/client/src/app/core/containers/containers.component.html
+++ b/src/client/src/app/core/containers/containers.component.html
@@ -36,9 +36,10 @@
             <td>
               <button
                 type="button"
+                (click)="copyId(container.short_id)"
                 class="btn btn-secondary btn-sm text-lowercase btn-rounded"
               >
-                {{ container.short_id }}
+                <i class="fas fa-clone"></i> {{ container.short_id }}
               </button>
             </td>
             <td>
