--- a/src/client/src/app/core/images/images.component.html
+++ b/src/client/src/app/core/images/images.component.html
@@ -1,68 +1,39 @@
 <h1
-  class="dodger-blue mt-2 text-center fw-bold navbar-text"
+  class="dodger-blue mt-3 text-center fw-bold navbar-text"
   data-aos="fade-down"
   data-aos-duration="1000"
 >
-  <i class="far fa-copy"></i> Images
+  <i class="far fa-copy"></i> Images <br />
+  <button class="btn btn-secondary" routerLink="/images/pull">
+    <i class="fas fa-plus-square"></i> Pull Images
+  </button>
 </h1>
 
-<div class="flex-row-container p-5">
+<div class="container p-3">
   <div
-    class="card m-2 flex-row-item"
+    class="card m-3 w-50 mb-3 m-auto"
+    *ngFor="for; let image; of: images"
     data-aos="zoom-out"
     data-aos-duration="1000"
-    *ngFor="for; let image; of: images"
   >
-    <img
-      src="assets/images/docker-logo.png"
-      class="card-img-top"
-      style="width: 150px; margin: auto"
-    />
-
     <div class="card-body">
-      <h4 class="card-title dodger-blue text-capitalize">
+      <h5 class="card-title dodger-blue text-capitalize">
         <i class="fas fa-cube"></i> {{ image.name }}
-      </h4>
-      <ul class="list-group mb-1">
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-md-6">
-              <span class="text-warning fw-bold">Short ID:</span>
-            </div>
-            <div class="col-md-6">
-              <button
-                class="btn btn-sm btn-rounded btn-warning text-lowercase"
-                (click)="copyId(image.short_id)"
-              >
-                {{ image.short_id }}
-              </button>
-            </div>
-          </div>
-        </li>
-      </ul>
-      <div class="text-center">
-        <div class="row">
-          <div class="col-md-4"></div>
-          <div class="col-md-4"></div>
-          <div class="col-md-4"></div>
+      </h5>
+      <div class="row">
+        <div class="col-md-6">
+          {{ image.short_id }}
         </div>
-        <button class="mt-2 m-1 btn btn-success btn-sm text-capitalize">
-          <i class="fas fa-space-shuttle"></i> Run
-        </button>
-
-        <button
-          (click)="deleteImage(image.name)"
-          class="mt-2 m-1 btn btn-danger btn-sm text-capitalize"
-        >
-          <i class="fas fa-trash"></i> Delete
-        </button>
-
-        <button
-          (click)="getContainerByImage(image.name)"
-          class="text-white mt-2 m-1 btn dodger-blue-bg btn-sm text-capitalize"
-        >
-          <i class="fas fa-list-alt"></i> Containers
-        </button>
+        <div class="col-md-6">
+          <div class="float-end">
+            <button
+              class="btn dodger-blue-bg"
+              routerLink="/images/{{ image.short_id }}"
+            >
+              Go
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
