:book: Update text content on menu

--- a/src/client/src/app/core/menu/menu.component.html
+++ b/src/client/src/app/core/menu/menu.component.html
@@ -1,5 +1,4 @@
 <div class="container mt-2 p-3">
-  
   <div class="row p-3 mb-2">
     <div
       class="col-md-6 d-flex align-items-center justify-content-center"
@@ -12,10 +11,8 @@
             <strong>Assalomu alaykum!</strong>
           </h5>
 
-          <p class="note note-primary border">
-            I decided to create a dashboard for working with Docker easily. Now,
-            you can manage your containers and images.
-          </p>
+          I decided to create a dashboard for working with Docker easily. Now,
+          you can manage your containers and images.
         </div>
       </div>
     </div>
@@ -35,7 +32,11 @@
             </strong>
           </h5>
 
-          <p>Manage your containers</p>
+          <p>
+            A Docker container image is a lightweight, standalone, executable
+            package of software that includes everything needed to run an
+            application. In this section, you can manage your containers.
+          </p>
           <button
             type="button"
             routerLink="containers"
@@ -55,7 +56,12 @@
             >
           </h5>
 
-          <p>Manage your images</p>
+          <p>
+            A Docker image is a file used to execute code in a Docker container.
+            Docker images act as a set of instructions to build a Docker
+            container, like a template. In this section, you can manage your
+            images.
+          </p>
           <button type="button" routerLink="images" class="btn dodger-blue-bg">
             Go
           </button>
