:smile: reduce aos animation's duration

--- a/src/client/src/app/components/footer/footer.component.html
+++ b/src/client/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="text-center text-lg-start">
+<footer class="text-center">
   <!-- Copyright -->
   <div class="p-3 text-center">
     © 2022 Made with <i class="fas fa-heart text-danger pulse-animation"></i> by
