--- a/src/client/src/app/core/images/images.component.html
+++ b/src/client/src/app/core/images/images.component.html
@@ -4,7 +4,7 @@
   data-aos-duration="1000"
 >
   <i class="far fa-copy"></i> Images <br />
-  <button class="btn btn-secondary" routerLink="/images/pull">
+  <button class="btn btn-secondary" routerLink="/pull-images">
     <i class="fas fa-plus-square"></i> Pull Images
   </button>
 </h1>
@@ -14,10 +14,10 @@
     class="card m-3 w-50 mb-3 m-auto"
     *ngFor="for; let image; of: images"
     data-aos="zoom-out"
-    data-aos-duration="1000"
+    data-aos-duration="500"
   >
     <div class="card-body">
-      <h5 class="card-title dodger-blue text-capitalize">
+      <h5 class="card-title dodger-blue">
         <i class="fas fa-cube"></i> {{ image.name }}
       </h5>
       <div class="row">
@@ -27,7 +27,7 @@
         <div class="col-md-6">
           <div class="float-end">
             <button
-              class="btn dodger-blue-bg"
+              class="btn dodger-blue-bg text-white"
               routerLink="/images/{{ image.short_id }}"
             >
               Go
