--- a/src/client/src/app/core/image/image.component.html
+++ b/src/client/src/app/core/image/image.component.html
@@ -64,7 +64,7 @@
             </button>
 
             <button
-              (click)="deleteImage(image)"
+              (click)="getConfirmModal(image)"
               class="mt-2 m-1 btn btn-danger text-capitalize"
             >
               <i class="fas fa-trash"></i> Delete
