:heavy_plus_sign: Add routerLink to image name button

--- a/src/client/src/app/core/containers/containers.component.html
+++ b/src/client/src/app/core/containers/containers.component.html
@@ -55,6 +55,7 @@
               <button
                 type="button"
                 class="btn btn-primary btn-rounded text-lowercase"
+                [routerLink]="['/images',container.image.short_id]"
               >
                 {{ container.image.name }}
               </button>
