:tada: Major improvements on UI, created sidebar!

--- a/src/client/src/app/app.component.html
+++ b/src/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
-
-<app-footer></app-footer>
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
