--- a/src/client/src/app/core/menu/menu.component.html
+++ b/src/client/src/app/core/menu/menu.component.html
@@ -1,29 +1,8 @@
 <div class="container mt-2 p-3">
-  <div class="row p-3 mb-2">
-    <div
-      class="col-md-6 d-flex align-items-center justify-content-center"
-      data-aos="zoom-in"
-      data-aos-duration="500"
-    >
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">
-            <strong>Assalomu alaykum!</strong>
-          </h5>
-
-          I decided to create a dashboard for working with Docker easily. Now,
-          you can manage your containers and images.
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <img src="assets/images/container-ship.svg" class="img-fluid" alt="" />
-    </div>
-  </div>
-
   <div class="row">
     <div class="col-md-6 mb-2" data-aos="fade-right" data-aos-duration="500">
       <div class="card">
+        <img src="/assets/images/container-ship.svg" class="card-img-top" />
         <div class="card-body">
           <h5 class="card-title">
             <strong>
@@ -49,6 +28,7 @@
     </div>
     <div class="col-md-6 mb-2" data-aos="fade-left" data-aos-duration="500">
       <div class="card">
+        <img src="/assets/images/boxes.svg" class="card-img-top" />
         <div class="card-body">
           <h5 class="card-title">
             <strong
