:+1: Changed header icon, added padding & actions field

--- a/src/client/src/app/components/header/header.component.html
+++ b/src/client/src/app/components/header/header.component.html
@@ -22,7 +22,7 @@
         class="btn dodger-blue-bg text-capitalize"
         routerLink="containers"
       >
-        <i class="fas fa-th-large"></i> Containers
+      <i class="fas fa-box"></i> Containers
       </button>
     </li>
     <hr />
