--- a/src/client/src/app/core/image/image.component.html
+++ b/src/client/src/app/core/image/image.component.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col-md-6">
                   <button
-                    class="btn btn-rounded btn-warning text-lowercase"
+                    class="btn btn-rounded btn-warning text-lowercase p-2"
                     (click)="copyId(image.short_id)"
                   >
                     <i class="fas fa-clone"></i> {{ image.short_id }}
