:pencil: Change animation duration & routerLink

--- a/src/client/src/app/components/header/header.component.html
+++ b/src/client/src/app/components/header/header.component.html
@@ -8,7 +8,8 @@
       class="btn btn-sm btn-rounded text-capitalize fw-bold"
       style="box-shadow: none"
     >
-      <i class="fas fa-circle fa-beat"></i> {{ isRunning ? "Running" : "Stopped" }}
+      <i class="fas fa-circle fa-beat"></i>
+      {{ isRunning ? "Running" : "Stopped" }}
     </button>
   </div>
 </nav>
@@ -22,7 +23,7 @@
         class="btn dodger-blue-bg text-capitalize"
         routerLink="containers"
       >
-      <i class="fas fa-box"></i> Containers
+        <i class="fas fa-box"></i> Containers
       </button>
     </li>
     <hr />
@@ -33,7 +34,7 @@
     </li>
     <hr />
     <li class="list-group-item" style="border: none">
-      <button class="btn dodger-blue-bg text-capitalize" routerLink="images">
+      <button class="btn dodger-blue-bg text-capitalize" routerLink="about">
         <i class="fas fa-info-circle"></i> About
       </button>
     </li>
