--- a/src/client/src/app/components/about/about.component.html
+++ b/src/client/src/app/components/about/about.component.html
@@ -16,7 +16,7 @@
 
         <a
           class="m-1 btn btn-dark btn-rounded text-capitalize"
-          href="https://github.com/AbduazizZiyodov"
+          href="https://github.com/AbduazizZiyodov/docker-dashboard"
           target="_blank"
         >
           <i class="fab fa-github-alt"></i> Github
