--- a/src/client/src/app/core/image/image.component.html
+++ b/src/client/src/app/core/image/image.component.html
@@ -67,7 +67,7 @@
             </button>
 
             <button
-              (click)="getConfirmModal(image)"
+              (click)="getDeleteModal(image)"
               class="mt-2 m-1 btn btn-danger text-capitalize"
             >
               <i class="fas fa-trash"></i> Delete
