:pencil: Fix image path, api url, base href

--- a/src/client/src/app/core/menu/menu.component.html
+++ b/src/client/src/app/core/menu/menu.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-6 mb-2" data-aos="fade-right" data-aos-duration="500">
       <div class="card">
-        <img src="/assets/images/container-ship.svg" class="card-img-top" />
+        <img src="./assets/images/container-ship.svg" class="card-img-top" />
         <div class="card-body">
           <h5 class="card-title">
             <strong>
@@ -28,7 +28,7 @@
     </div>
     <div class="col-md-6 mb-2" data-aos="fade-left" data-aos-duration="500">
       <div class="card">
-        <img src="/assets/images/boxes.svg" class="card-img-top" />
+        <img src="./assets/images/boxes.svg" class="card-img-top" />
         <div class="card-body">
           <h5 class="card-title">
             <strong
