--- a/src/client/src/app/core/containers/containers.component.html
+++ b/src/client/src/app/core/containers/containers.component.html
@@ -3,11 +3,12 @@
     <i class="fas fa-cubes"></i> Containers
   </h2>
 
-  <div class="card">
+  <div class="card" data-aos="zoom-in" data-aos-duration="500">
     <div class="card-body">
       <p
         data-aos="zoom-in"
         data-aos-duration="500"
+        data-aos-once="true"
         *ngIf="containers.length == 0"
         class="note border note-primary text-center"
       >
@@ -27,11 +28,7 @@
             <th><i class="fas fa-compact-disc"></i> Actions</th>
           </tr>
         </thead>
-        <tbody
-          *ngFor="for; let container; of: containers; index as i"
-          data-aos="zoom-in"
-          data-aos-duration="500"
-        >
+        <tbody *ngFor="for; let container; of: containers; index as i">
           <tr>
             <td>{{ i + 1 }}.</td>
             <td>
