--- a/src/client/src/app/app.component.html
+++ b/src/client/src/app/app.component.html
@@ -4,19 +4,18 @@
   <div class="row">
     <div class="col">
       <button
-        class="btn btn-sm btn-success float-start rounded m-1"
+        class="btn btn-sm btn-success float-start rounded m-3"
         (click)="back()"
       >
-        <i class="fas fa-caret-square-left"></i>
+      <i class="fas fa-arrow-left"></i>
       </button>
       <button
-        class="btn btn-sm btn-success float-end rounded m-1"
+        class="btn btn-sm btn-success float-end rounded m-3"
         (click)="next()"
       >
-        <i class="fas fa-caret-square-right"></i>
+      <i class="fas fa-arrow-right"></i>
       </button>
     </div>
   </div>
-
   <router-outlet></router-outlet>
 </div>
