--- a/src/client/src/app/core/image/image.component.html
+++ b/src/client/src/app/core/image/image.component.html
@@ -23,7 +23,7 @@
           </h4>
           <div class="shadow-1 rounded p-2 mb-1 mt-1">
             <h5 class="text-center h5-responsive">
-              "{{ image.description?.replace(".", "") }}""
+              {{ image.description?.replace(".", "") }}
             </h5>
           </div>
 
