--- a/src/client/src/app/core/images/images.component.html
+++ b/src/client/src/app/core/images/images.component.html
@@ -1,11 +1,11 @@
 <h1
-  class="dodger-blue mt-3 text-center fw-bold navbar-text"
+  class="dodger-blue mt-3 text-center fw-bold"
   data-aos="fade-down"
   data-aos-duration="1000"
 >
-  <i class="far fa-copy"></i> Images <br />
-  <button class="btn btn-secondary" routerLink="/pull-images">
-    <i class="fas fa-plus-square"></i> Pull Images
+<i class="fas fa-box-open"></i> <span class="navbar-text">Images</span> <br />
+  <button class="btn btn-secondary text-capitalize" routerLink="/pull-images">
+    <i class="fas fa-cloud-download-alt"></i> Pull Images
   </button>
 </h1>
 
