--- a/src/client/src/app/core/menu/menu.component.html
+++ b/src/client/src/app/core/menu/menu.component.html
@@ -1,51 +1,37 @@
 <div class="container mt-2 p-3">
-  <div class="row">
-    <div class="col-md-6 mb-2" data-aos="fade-right" data-aos-duration="500">
-      <div class="card">
-        <img src="./assets/images/container-ship.svg" class="card-img-top" />
-        <div class="card-body">
-          <h5 class="card-title">
-            <strong>
-              <i class="fas fa-archive dodger-blue"></i>
-              Containers
-            </strong>
-          </h5>
-
-          <p>
-            A Docker container image is a lightweight, standalone, executable
-            package of software that includes everything needed to run an
-            application. In this section, you can manage your containers.
-          </p>
-          <button
-            type="button"
-            routerLink="containers"
-            class="btn dodger-blue-bg"
-          >
-            Go
-          </button>
+  <div
+    class="row"
+    data-aos="fade-up"
+    data-aos-duration="500"
+    data-aos-anchor-placement="top-bottom"
+  >
+    <div class="card">
+      <div class="card-body">
+        <h4 class="navbar-text dodger-blue card-title">Welcome!</h4>
+        <div class="text-center">
+          <img
+            src="assets/images/docker.png"
+            class="img-fluid rounded-pill img-thumbnail"
+            width="750px"
+            alt=""
+          />
         </div>
-      </div>
-    </div>
-    <div class="col-md-6 mb-2" data-aos="fade-left" data-aos-duration="500">
-      <div class="card">
-        <img src="./assets/images/boxes.svg" class="card-img-top" />
-        <div class="card-body">
-          <h5 class="card-title">
-            <strong
-              ><i class="fas fa-compact-disc dodger-blue"></i> Images</strong
-            >
-          </h5>
 
+        <div class="border p-3 mt-2">
           <p>
-            A Docker image is a file used to execute code in a Docker container.
-            Docker images act as a set of instructions to build a Docker
-            container, like a template. In this section, you can manage your
-            images.
+            Thanks for using <strong>Docker Dashboard!</strong> I hope this
+            application will help with your development process. Now the
+            application has basic functionality and I have great plans for the
+            future. If you want to support my work, just star on this GitHub
+            repository and share this with your friends. Also, I opened a
+            discussion on GitHub. I would be very happy if you write any ideas,
+            feedback & suggestions.
           </p>
-          <button type="button" routerLink="images" class="btn dodger-blue-bg">
-            Go
-          </button>
+          <figcaption class="blockquote-footer">Abduaziz Ziyodov</figcaption>
         </div>
+        <p class="mt-2 p-3 text-center">
+          Choose any section from the left & start to manage your resources!
+        </p>
       </div>
     </div>
   </div>
