:package: Installed ng-select

--- a/src/client/src/styles.scss
+++ b/src/client/src/styles.scss
@@ -4,6 +4,8 @@
 @import "~@fortawesome/fontawesome-free/scss/regular.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
 
+@import "~@ng-select/ng-select/themes/default.theme.css";
+
 @import "~mdb-angular-ui-kit/assets/scss/mdb.scss";
 
 * {
