:heavy_plus_sign: Added additional field for `tag`, updated image's full name

--- a/src/client/src/app/core/image/image.component.html
+++ b/src/client/src/app/core/image/image.component.html
@@ -19,7 +19,7 @@
           <h4 class="card-title dodger-blue">
             <i *ngIf="image.is_official" class="fas fa-award"></i>
             <i *ngIf="!image.is_official" class="fas fa-cube"></i>
-            {{ image.name }}
+            {{ image.name }}:{{ image.tag }}
           </h4>
           <div class="shadow-1 rounded p-2 mb-1 mt-1">
             <h5 class="text-center h5-responsive">
