--- a/src/client/src/app/core/images/images.component.html
+++ b/src/client/src/app/core/images/images.component.html
@@ -3,7 +3,7 @@
   data-aos="fade-down"
   data-aos-duration="500"
 >
-<i class="fas fa-box-open"></i> <span class="navbar-text">Images</span> <br />
+  <i class="fas fa-box-open"></i> <span class="navbar-text">Images</span> <br />
   <button class="btn btn-secondary text-capitalize" routerLink="/pull-images">
     <i class="fas fa-cloud-download-alt"></i> Pull Images
   </button>
@@ -18,7 +18,7 @@
   >
     <div class="card-body">
       <h5 class="card-title dodger-blue">
-        <i class="fas fa-cube"></i> {{ image.name }}
+        <i class="fas fa-cube"></i> {{ image.name + ":" + image.tag }}
       </h5>
       <div class="row">
         <div class="col-md-6">
